third_party/rust/pin-project/tests/ui/cfg/packed_sneaky-span-issue-1.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> $DIR/packed_sneaky-span-issue-1.rs:8:1
  |
8 | #[hidden_repr(packed)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
